--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ seaborn>=0.11.0
 scipy>=1.7.0
 simpy>=4.0.0
 scikit-learn>=1.0.0
+pulp>=2.6.0
 
 # Optional dependencies for enhanced functionality
 # Uncomment if needed for advanced features
